--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
     </div>
 
     <footer>
-        <p>© Proyecto Ético Individual. Cristian Cifuentes [Año de finalización del proyecto]</p>
+        <p>© Proyecto Ético Individual. Cristian Cifuentes 2025</p>
         <p>Desplegado utilizando HTML, CSS y JavaScript.</p>
     </footer>
     
@@ -929,3 +929,4 @@
     </script>
 </body>
 </html>
+
